# probability-rs

./: Cargo.toml  README.md
.devcontainer/: devcontainer.json
.github/workflows/: rust.yml
src/: conditional.rs  conditional_distribution.rs  constant.rs  convert.rs  dependent_joint.rs  distribution.rs  independent_array_joint.rs  independent_joint.rs  instant.rs  instant_conditional.rs  lib.rs  multivariate_normal.rs  normal.rs  optimization.rs  prelude.rs  preslude.rs
src/continuous/: beta.rs  chi_squared.rs  continuous_distribution.rs  exp.rs  fisher_f.rs  gamma.rs  mod.rs  normal.rs  student_t.rs  uniform.rs
src/continuous/beta/: README.md  multivariate.rs  univariate.rs
src/continuous/elliptical/: mod.rs
src/continuous/exp/: mod.rs  params.rs
src/continuous/fisher_f/: mod.rs  params.rs
src/continuous/gamma/: mod.rs  params.rs
src/continuous/multivariate/: dirichlet.rs  elliptical.rs  inverse_wishart.rs  mod.rs  multivariate_cauchy.rs  multivariate_normal.rs  multivariate_student_t.rs  normal_inverse_wishart.rs  wishart.rs
src/discrete/: binominal.rs  geometric.rs  mod.rs  poisson.rs  uniform.rs
src/discrete/binary/: bernoulli.rs  categorical.rs
src/discrete/geometric/: mod.rs  params.rs
src/discrete/integer/: bernoulli.rs  categorical.rs  mod.rs
src/discrete/nomial/: binomial.rs  mod.rs  multinomial.rs
src/discrete/nominal/: binominal.rs  mod.rs
src/distribution/: conditioned.rs  continuous_samples.rs  converted.rs  dependent_joint.rs  differentiable.rs  discrete_posterior.rs  discrete_samples.rs  event.rs  independent_array_joint.rs  independent_joint.rs  independent_value_array_joint.rs  instant.rs  instant_condition_differentiable.rs  instant_value_differentiable.rs  joint_array_distribution.rs  joint_distribution.rs  mod.rs  random_variable.rs  samples.rs  switch.rs  switched.rs  transform.rs  variational_inference.rs
src/mcmc/: discrete_slice_sampling.rs  elliptical_slice.rs  elliptical_slice_sampling.rs  gibbs.rs  gibbs_sampling.rs  hamiltonian.rs  importance_sampling.rs  metropolis.rs  metropolis_hastings.rs  mod.rs  sir.rs  slice_sampling.rs
src/nonparametric/: dirichlet_crp.rs  generalized_kernel_density_estimation.rs  mod.rs
src/scalar/: mod.rs  normal.rs
src/variational/: mod.rs  stein.rs  svgd.rs
src/vector/: mod.rs
tests/: bayes_opt_test.rs  gp_test.rs  gplvm_test.rs  i2nac.md  i2nac.rs  igmm_test.rs  imlr_test.rs  imr.rs  linear_regression.rs  log_gauss_cox_process.rs  pyp_dpmm_test.rs  rec_gp_test.rs  sbp_dpmm_test.rs  tensor_gp_test.rs
tests/igmm/: README.md
tests/imlr/: README.md
(+129 files in other folders)
