[package]
name = "opensrdk-probability"
version = "0.1.7"
authors = ["Kimura Yu <33382781+KimuraYu45z@users.noreply.github.com>"]
edition = "2018"
description = "Standard probability library for OpenSRDK toolchain."
repository = "https://github.com/OpenSRDK/probability-rs"
license = "Apache-2.0"
keywords = ["sampling", "stochastics", "random", "probability", "distribution"]
categories = ["mathematics", "science"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7"
rand_distr = "0.2.2"
thiserror = "1.0.24"
rayon = "1.5.0"
opensrdk-linear-algebra = "0.6.1"

[dev-dependencies]
blas-src = { version = "0.6", features = ["intel-mkl"] } 
lapack-src = { version = "0.6", features = ["intel-mkl"] }
