[package]
name = "opensrdk-probability"
version = "0.8.9"
authors = ["Kimura Yu <33382781+KimuraYu45z@users.noreply.github.com>"]
edition = "2018"
description = "Standard probability library for OpenSRDK toolchain."
repository = "https://github.com/OpenSRDK/probability-rs"
license = "Apache-2.0"
keywords = ["sampling", "stochastics", "random", "probability", "distribution"]
categories = ["mathematics", "science"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.4"
rand_distr = "0.4.1"
thiserror = "1.0.28"
rayon = "1.5.1"
num-integer = "0.1"
opensrdk-linear-algebra = "0.8.4"
opensrdk-kernel-method = "0.2.4"
opensrdk-symbolic-computation = "0.1.3"
special = "0.8.1"
serde = { version = "1", features = ["derive"] }

[dev-dependencies]
blas-src = { version = "0.8", features = ["intel-mkl"] } 
lapack-src = { version = "0.8", features = ["intel-mkl"] }
plotters = "0.3.1"